--- a/test/text.html
+++ b/test/text.html
@@ -12,9 +12,12 @@
 			color: #2f2f2f;
 		}
 
+		/* about-me */
 		.main-content-1 {
 			width: 100%;
 			height: 500vh;
+			margin: 100vh 0;
+			border: 1px solid red;
 		}
 
 		.sticky {
@@ -25,6 +28,20 @@
 			align-items: center;
 			justify-content: center;
 			overflow: hidden;
+		}
+
+		.title {
+			width: 100%;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			text-align: center;
+		}
+
+		h1 {
+			font-size: 50px;
+			letter-spacing: 50px;
 		}
 
 		.card-frame {
@@ -71,15 +88,28 @@
 			background-color: #e0ded7;
 			background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, #ffffff00 0px, #ffffff00 67%);
 		}
+
+		.portrait {
+			width: 200px;
+			height: 200px;
+			border-radius: 50%;
+			background: no-repeat 50% 25%/100% url(/images/portrait.jpg);
+		}
 	</style>
 </head>
 
 <body>
-	<div class="main-content-1">
+	<div class="main-content-1"> 
+		<!-- about-me -->
+
+
 		<div class="sticky">
+			<div class="title">
+				<h1>최소연은 바보 멍청이 똥개</h1>
+			</div>
 			<div class="card-frame">
 				<div class="card">
-					<div class="front">AAAAA</div>
+					<div class="front"></div>
 					<div class="back"></div>
 				</div>
 				<div class="card">
@@ -100,7 +130,7 @@
 
 	<script>
 		class CardFilpOnScroll {
-			constructor(mainContent1, sticky) {
+			constructor(wrapper, sticky) {
 				this.wrapper = wrapper
 				this.sticky = sticky
 				this.cards = sticky.querySelectorAll('.card')
@@ -110,17 +140,59 @@
 				this.end = 0
 				this. step = 0
 			}
+
 			init() {
-				this.start = 
-				this.end = 
-				this. step = 
+				this.start = this.wrapper.offsetTop
+				this.end = this.wrapper.offsetTop + this.wrapper.offsetHeight - innerHeight * 1.2
+				this.step = (this.end - this.start) / (this.length * 2)
 			}
-			animate() {}
+
+			animate() {
+				this.cards.forEach((card, i) => {
+					const s = this.start + this.step * i
+					const e = s + this.step * (this.length + 1)
+
+					if(scrollY <= 2700) {
+						card.style.transform = `
+						perspective(100vw)
+						translateX(100vw)
+						rotateY(180deg)
+						`
+					} else if (scrollY > s && scrollY <= e - this.step) {
+						card.style.transform = `
+						perspective(100vw)
+						translateX(${100 - (scrollY - s) / (e - s) * 100}vw)
+						rotateY(180deg)
+						`
+					} else if (scrollY > e- this.step && scrollY <= e) {
+						card.style.transform = `
+						perspective(100vw)
+						translateX(${100 - (scrollY - s) / (e - s) * 100}vw)
+						rotateY(${180 -  -(scrollY - (e - this.step)) / this.step * 180}deg)
+						`
+					} else if (scrollY > e) {
+						card.style.transform = `
+						perspective(100vw)
+						translateX(0vw)
+						rotateY(0deg)
+						`
+					}
+				});
+			}
 		}
 
-		const mainContent1 = document.querySelector('.main-content-1'),
-			sticky = document.querySelector('.sticky'),
-			cardFilpOnScroll = new CardFilpOnScroll(mainContent1, sticky)
+		const mainContent1 = document.querySelector('.main-content-1')
+		const sticky = document.querySelector('.sticky')
+		const cardFilpOnScroll = new CardFilpOnScroll(mainContent1, sticky)
+		cardFilpOnScroll.init()
+
+		window.addEventListener('scroll', () => {
+			cardFilpOnScroll.animate()
+		})
+
+		window.addEventListener('resize', () => {
+			cardFilpOnScroll.init()
+		})
 	</script>
 </body>
 </html>
