--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
 	<div id="wrap">
-		<!-- 사이드 메뉴 -->
+		<!-- 사이드 메뉴 시작-->
+
+		<!-- side-menu side-on -->
 		<aside class="side-menu">
-			
 		</aside>
+		<!-- menu-btn btn-on -->
+		<a class="menu-btn"></a>
+
+		<!-- 사이드 메뉴 끝 -->
 
 		<header>
 			<div class="stars-bg">
@@ -71,36 +76,217 @@
 				<img src="./images/icon_whale.png" alt="배경아이콘" class="bg-whale">
 				<img src="./images/icon_astronaut.png" alt="배경아이콘" class="bg-astronaut">
 
+				<div class="about-me">
 
-
-				<div class="about-me1">
-					<div class="sticky">
-
-						<div class="title">
-							<h2>최소연은 바보 멍청이 똥깨 말미잘</h2>
+					<!-- 자기소개 왼쪽 -->
+					<div class="about-me-left">
+						<div class="about-me-portrait">
 						</div>
+					</div>
+					<!-- 자기소개 오른쪽 -->
+					<div class="about-me-right">
+						<article class="about-me-info">
+							<div class="about-me-info-left">
+								<!-- 자기소개 제목 -->
+								<div class="info-title">
+									<h3><i class="fa-regular fa-address-card"></i><b>introduce</b></h3>
+								</div>
+								<!-- 이름 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>name</p>
+									</div>
+									<div class="infoA">
+										<b>김동현</b>
+									</div>
+								</div>
+								<!-- 나이 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>age</p>
+									</div>
+									<div class="infoA">
+										<b>25세</b>
+									</div>
+								</div>
+								<!-- 생년월일 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>birthday</p>
+									</div>
+									<div class="infoA">
+										<b>1999.03.15</b>
+									</div>
+								</div>
+								<!-- 주소 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>address</p>
+									</div>
+									<div class="infoA">
+										<b>경기도 시흥시 인선길 63</b>
+									</div>
+								</div>
+								<!-- 휴대폰번호 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>phone</p>
+									</div>
+									<div class="infoA">
+										<b>010-5509-3095</b>
+									</div>
+								</div>
+								<!-- 이메일 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>E-Mail</p>
+									</div>
+									<div class="infoA">
+										<b>kdh990315@naver.com</b>
+									</div>
+								</div>
+							</div>
+							<div class="about-me-info-right">
+								<!-- 자기소개 제목 -->
+								<div class="info-title">
+									<h3><i class="fa-solid fa-user-graduate"></i><b>experienced</b></h3>
+								</div>
+								<!-- 경력 사항 -->
+								<div class="ex-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>2018.03.05 ~ 2021.03.02</p>
+									</div>
+									<div class="exA">
+										<b>용인송담대학교</b><br>
+										<b>정보통신학과</b>
+									</div>
+								</div>
+								<!-- 경력 사항 -->
+								<div class="ex-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>2022.03.21 ~ 2022.09.24</p>
+									</div>
+									<div class="exA">
+										<b>라인컴퓨터아트학원</b><br>
+										<b>(스마트웹&콘텐츠개발)[B.L]웹표준기반 스마트UIUX디자인&웹퍼블리셔</b>
+									</div>
+								</div>
+							</div>
+						</article>
+						<article class="about-me-info">
+							<div class="about-me-skill-info-box">
+								<div class="info-title">
+									<h3><i class="fa-solid fa-book-bookmark"></i><b>skill</b></h3>
+								</div>
 
-						<div class="card-frame">
-							<div class="card">
-								<div class="front"></div>
-								<div class="back"></div>
+								<!-- 사용 가능한 언어 -->
+								<div class="skill-info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>html</p>
+									</div>
+									<div class="skill-info">
+										<b>웹표준과 접근성을 준수한 코딩으로 웹페이지 구현이 가능합니다.
+											미디어쿼리를 이용한 반응형웹 크로스 브라우징 구현이 가능합니다.
+											코딩 및 HTML 스타일링과 웹페이지 마크업이 가능합니다,
+											검색과 빠른 로딩, 유지보수를 고려하여 웹페이지 구현이 가능하며 태그의 의미를 고려한 시맨틱 태그를 사용하여 웹페이지 구현이 가능합니다.</b>
+									</div>
+								</div>
 							</div>
-							<div class="card">
-								<div class="front">BBBBB</div>
-								<div class="back"></div>
-							</div>
-							<div class="card">
-								<div class="front">CCCCC</div>
-								<div class="back"></div>
-							</div>
-							<div class="card">
-								<div class="front">DDDDD</div>
-								<div class="back"></div>
-							</div>
-						</div>
+						</article>
+						<article class="about-me-info">
+							<div class="about-me-info-left"></div>
+							<div class="about-me-info-right"></div>
+						</article>
 					</div>
 				</div>
 			</section>
+			<div class="about-me1">
+				<div class="sticky">
+
+					<div class="title">
+						<h2>최소연은 바보 멍청이 똥깨 말미잘</h2>
+					</div>
+
+					<div class="card-frame">
+						<div class="card">
+							<div class="front">
+								<div class="portrait"></div>
+
+								<div class="info-box">
+									<!-- 이름 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>name</p>
+									</div>
+									<div class="infoA">
+										<b>김동현</b>
+									</div>
+								</div>
+								<!-- 나이 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>age</p>
+									</div>
+									<div class="infoA">
+										<b>25세</b>
+									</div>
+								</div>
+								<!-- 생년월일 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>birthday</p>
+									</div>
+									<div class="infoA">
+										<b>1999.03.15</b>
+									</div>
+								</div>
+								<!-- 주소 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>address</p>
+									</div>
+									<div class="infoA">
+										<b>경기도 시흥시 인선길 63</b>
+									</div>
+								</div>
+								<!-- 휴대폰번호 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>phone</p>
+									</div>
+									<div class="infoA">
+										<b>010-5509-3095</b>
+									</div>
+								</div>
+								<!-- 이메일 -->
+								<div class="info-wrap">
+									<div class="infoQ">
+										<div class="circle"></div><p>E-Mail</p>
+									</div>
+									<div class="infoA">
+										<b>kdh990315@naver.com</b>
+									</div>
+								</div>
+								</div>
+							</div>
+							
+							<div class="back"></div>
+						</div>
+						<div class="card">
+							<div class="front">BBBBB</div>
+							<div class="back"></div>
+						</div>
+						<div class="card">
+							<div class="front">CCCCC</div>
+							<div class="back"></div>
+						</div>
+						<div class="card">
+							<div class="front">DDDDD</div>
+							<div class="back"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 	</div>
