--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 								
 								<div class="skill-wrap">
 									<div class="skill-box"><span>html</span></div>
-									<div class="skill-box"><span>scss</span></div>
+									<div class="skill-box"><span>css/scss</span></div>
 									<div class="skill-box"><span>jquery</span></div>
 									<div class="skill-box"><span>javascript</span></div>
 									<div class="skill-box"><span>vus.js</span></div>
@@ -361,8 +361,46 @@
 							<div class="front">DDDDD</div>
 							<div class="back"></div>
 						</div>
+
 					</div>
-				</div>
+
+					<div class="skill-modal-wrap">
+
+						<!-- html -->
+						<div class="skill-modal modal-on">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>html</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>웹표준과 접근성을 준수한 코딩으로 웹페이지 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>미디어쿼리를 이용한 반응형 웹 크로스브라우징 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>코딩 및 HTML 스타일링과 웹페이지 마크업이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>검색과 유지보수를 고려하여 웹페이지 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>태그의 의미를 고려한 시멘틱태그를 사용하여 웹페이지 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span></span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- css/scss -->
+						<div class="skill-model">
+
+						</div>
+						
+					</div>
+				</div> 
 			</div>
 		</main>
 
