--- a/index.html
+++ b/index.html
@@ -68,139 +68,8 @@
 			</section>
 
 			<!-- 자기소개 섹션-->
-			<section class="about-me-wrap">
 
-				<div class="stars-bg"></div>
-				
-				<img src="./images/icon_telescope.png" alt="배경아이콘" class="bg-telescope">
-				<img src="./images/icon_whale.png" alt="배경아이콘" class="bg-whale">
-				<img src="./images/icon_astronaut.png" alt="배경아이콘" class="bg-astronaut">
-
-				<div class="about-me">
-
-					<!-- 자기소개 왼쪽 -->
-					<div class="about-me-left">
-						<div class="about-me-portrait">
-						</div>
-					</div>
-					<!-- 자기소개 오른쪽 -->
-					<div class="about-me-right">
-						<article class="about-me-info">
-							<div class="about-me-info-left">
-								<!-- 자기소개 제목 -->
-								<div class="info-title">
-									<h3><i class="fa-regular fa-address-card"></i><b>introduce</b></h3>
-								</div>
-								<!-- 이름 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>name</p>
-									</div>
-									<div class="infoA">
-										<b>김동현</b>
-									</div>
-								</div>
-								<!-- 나이 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>age</p>
-									</div>
-									<div class="infoA">
-										<b>25세</b>
-									</div>
-								</div>
-								<!-- 생년월일 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>birthday</p>
-									</div>
-									<div class="infoA">
-										<b>1999.03.15</b>
-									</div>
-								</div>
-								<!-- 주소 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>address</p>
-									</div>
-									<div class="infoA">
-										<b>경기도 시흥시 인선길 63</b>
-									</div>
-								</div>
-								<!-- 휴대폰번호 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>phone</p>
-									</div>
-									<div class="infoA">
-										<b>010-5509-3095</b>
-									</div>
-								</div>
-								<!-- 이메일 -->
-								<div class="info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>E-Mail</p>
-									</div>
-									<div class="infoA">
-										<b>kdh990315@naver.com</b>
-									</div>
-								</div>
-							</div>
-							<div class="about-me-info-right">
-								<!-- 자기소개 제목 -->
-								<div class="info-title">
-									<h3><i class="fa-solid fa-user-graduate"></i><b>experienced</b></h3>
-								</div>
-								<!-- 경력 사항 -->
-								<div class="ex-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>2018.03.05 ~ 2021.03.02</p>
-									</div>
-									<div class="exA">
-										<b>용인송담대학교</b><br>
-										<b>정보통신학과</b>
-									</div>
-								</div>
-								<!-- 경력 사항 -->
-								<div class="ex-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>2022.03.21 ~ 2022.09.24</p>
-									</div>
-									<div class="exA">
-										<b>라인컴퓨터아트학원</b><br>
-										<b>(스마트웹&콘텐츠개발)[B.L]웹표준기반 스마트UIUX디자인&웹퍼블리셔</b>
-									</div>
-								</div>
-							</div>
-						</article>
-						<article class="about-me-info">
-							<div class="about-me-skill-info-box">
-								<div class="info-title">
-									<h3><i class="fa-solid fa-book-bookmark"></i><b>skill</b></h3>
-								</div>
-
-								<!-- 사용 가능한 언어 -->
-								<div class="skill-info-wrap">
-									<div class="infoQ">
-										<div class="circle"></div><p>html</p>
-									</div>
-									<div class="skill-info">
-										<b>웹표준과 접근성을 준수한 코딩으로 웹페이지 구현이 가능합니다.
-											미디어쿼리를 이용한 반응형웹 크로스 브라우징 구현이 가능합니다.
-											코딩 및 HTML 스타일링과 웹페이지 마크업이 가능합니다,
-											검색과 빠른 로딩, 유지보수를 고려하여 웹페이지 구현이 가능하며 태그의 의미를 고려한 시맨틱 태그를 사용하여 웹페이지 구현이 가능합니다.</b>
-									</div>
-								</div>
-							</div>
-						</article>
-						<article class="about-me-info">
-							<div class="about-me-info-left"></div>
-							<div class="about-me-info-right"></div>
-						</article>
-					</div>
-				</div>
-			</section>
-			<div class="about-me1">
+			<div class="about-me">
 				<div class="sticky">
 
 					<div class="title">
@@ -383,11 +252,9 @@
 								<div class="modal-content">
 									<ul>
 										<li><i class="fa-solid fa-minus"></i><span>웹표준과 접근성을 준수한 코딩으로 웹페이지 구현이 가능합니다.</span></li>
-										<li><i class="fa-solid fa-minus"></i><span>미디어쿼리를 이용한 반응형 웹 크로스브라우징 구현이 가능합니다.</span></li>
 										<li><i class="fa-solid fa-minus"></i><span>코딩 및 HTML 스타일링과 웹페이지 마크업이 가능합니다.</span></li>
 										<li><i class="fa-solid fa-minus"></i><span>검색과 유지보수를 고려하여 웹페이지 구현이 가능합니다.</span></li>
 										<li><i class="fa-solid fa-minus"></i><span>태그의 의미를 고려한 시멘틱태그를 사용하여 웹페이지 구현이 가능합니다.</span></li>
-										<li><i class="fa-solid fa-minus"></i><span></span></li>
 									</ul>
 								</div>
 
@@ -395,10 +262,182 @@
 						</div>
 
 						<!-- css/scss -->
-						<div class="skill-model">
+						<div class="skill-modal">
+							<div class="modal">
 
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>css/scss</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>웹표준과 접근성을 준수한 코딩으로 웹페이지 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>미디어쿼리를 이용한 반응형 웹 크로스브라우징 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>디자인 시안의 구조에 따른 마크업과 스타일링이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>css로 다양한 효과와 움직임 구현이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>scss 변수를 사용하여 오차를 줄이고 효율적으로 스타일링이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>scss 중첩기능을 사용해 html 태그 자체의 속성값을 줄여 가독성을 상승시킵니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>scss import 문법을 사용해 가독성을 높이고 유지보수를 용이하게 합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>scss mixin/include 문법을 사용해 반복되는 코드를 줄임으로 간결한 코드와 유지보수를 용이하게 합니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- jquery -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>jquery</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>웹디자인기능사의 준수하는 함수 사용이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>다양한 플러그인을 사용할 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>HTML 태그와 css의 제어 및 스타일링, 속성 다루기가 가능합니다</span></li>
+									</ul>
+								</div>
+
+							</div>
 						</div>
 						
+						<!-- javascript -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>javascript</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>다양한 이벤트에 따라 요소를 선택하고 선택된 요소의 스타일을 변경하고 조작하는데 익숙합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>웹페이지에서 가장 많이 활용되는 주요 UI 기능인 탭, 아코디언, 모달, 슬라이드쇼, 스크롤이벤트를 만들 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>함수를 적극 활용하여 재사용성과 가독성을 높이며, ES6 문법을 활용하여 좀 더 깔끔하고 읽기 쉬운 코드작성이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>웹페이지의 동적인 부분을 제어할때 setProperty함수와 classList 함수를 사용하는걸 선호합니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- vue.js -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>vue.js</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>다양한 이벤트에 따라 요소를 선택하고 선택된 요소의 스타일을 변경하고 조작하는데 익숙합니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- bootstrap -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>bootstrap</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>Bootstrap의라이브러리를 이용하여 보다 빠르게 웹페이지를 제작할 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>Bootstrap의 그리드시스템을 이용하여 반응형 웹페이지를 구현할 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>웹페이지에서 자주 사용되는 컴포넌트들을 적용하여 활용할 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>커스텀 CSS를 추가하여 기본 스타일에 원하는 스타일을 적용할 수 있습니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- photoshop -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>photoshop</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>규격에 맞게 이미지 크기를 잘라내고, 색을 반전시키거나 보정하는 등의 새 이미지 파일을 만들 수 있습니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>웹 페이지의 프로토타입과 상세페이지 제작이 가능합니다.</span></li>
+										<li><i class="fa-solid fa-minus"></i><span>photoshop의 각종 툴을 사용할 수 있습니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+						<!-- illustrator -->
+						<div class="skill-modal">
+							<div class="modal">
+
+								<div class="modal-title-wrap">
+									<div class="modal-title">
+										<span>illustrator</span>
+									</div>
+
+									<div class="close">
+										<span><i class="fa-solid fa-xmark"></i></span>
+									</div>
+								</div>
+
+								<div class="modal-content">
+									<ul>
+										<li><i class="fa-solid fa-minus"></i><span>간단한 이모티콘이나 도형 등을 만들고 패스파인더 및 각종 도형 툴을 응용하여 로고 및 타이포그래피를 제작 가능합니다.</span></li>
+									</ul>
+								</div>
+
+							</div>
+						</div>								
 					</div>
 				</div> 
 			</div>
