--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<h2>Portpolio</h2>
 					</div>
 					<!-- 포트폴리오 슬라이드 -->
-					<article class="protpolio-content">
+					<article class="portpolio-slide-wrap">
 						
 					</article>
 				</div>
