--- a/index.html
+++ b/index.html
@@ -63,13 +63,69 @@
 					<!-- 포트폴리오 슬라이드 -->
 					<article class="portpolio-slide-wrap">
 						<ul class="slide-container">
-							<li class="slide" style="background-color: aqua;">
-								
+							<li class="slide">
+								<div class="content">
+									<div class="content-left">
+										
+
+
+										<div class="portfolio-content-info-box">
+											<div class="portfolio-content-title">
+												<h3>MILLIE - LIBRARY</h3>
+											</div>
+											<div class="portfolio-content-info">
+												<span>오픈 API를 이용하여</span><br>
+												<span>클론코팅을 통해 제작하였습니다.</span>
+											</div>
+											<div class="portfolio-content-info2">
+												<span>모든 브라우져에서 보기 쉽게</span><br>
+												<span>반응형 작업을 하였습니다.</span>
+											</div>
+										</div>
+
+										<a href="#" class="portfolio-content-view-btn">view</a>
+									</div>
+
+									<div class="content-right">
+										<div class="content-portpolio-img">
+											<img src="./images/project01_img.jpeg" alt="portpolio-img" class="portpolio-img">
+										</div>
+
+										<div class="portfolio-skill-box">
+											<div class="skills">html</div>
+											<div class="skills">css/scss</div>
+											<div class="skills">jquery</div>
+											<div class="skills">javascript</div>
+											<div class="skills">ajax</div>
+										</div>
+									</div>
+
+								</div>
 							</li>
-							<li class="slide" style="background-color: aliceblue;"></li>
-							<li class="slide" style="background-color: wheat;"></li>
-							<li class="slide" style="background-color: darkblue;"></li>
-							<li class="slide" style="background-color: chocolate;"></li>
+							<li class="slide">
+								<div class="content">
+									<div class="content-left"></div>
+									<div class="content-right"></div>
+								</div>
+							</li>
+							<li class="slide">
+								<div class="content">
+									<div class="content-left"></div>
+									<div class="content-right"></div>
+								</div>
+							</li>
+							<li class="slide">
+								<div class="content">
+									<div class="content-left"></div>
+									<div class="content-right"></div>
+								</div>
+							</li>
+							<li class="slide">
+								<div class="content">
+									<div class="content-left"></div>
+									<div class="content-right"></div>
+								</div>
+							</li>
 						</ul>
 					</article>
 
